--- a/src/index.css
+++ b/src/index.css
@@ -19,10 +19,10 @@
 }
 
 /* For Firefox */
-/* .custom-scrollbar {
+.custom-scrollbar {
   scrollbar-width: thin;
   scrollbar-color: #459E97 #e0e0e0;
-} */
+}
 
 .menu-bar {
     transition: 0.6s;
